--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -1,8 +1,8 @@
-input.sheetscell_input_field {
+.sc_input_field {
     padding: 6px 10px;
     max-width: 320px;
     width: 100%;
 }
-input#sheets_save_bttn {
+#sheets_save_bttn {
     padding: 6px 18px;
 }
